<resources>
    <string name="app_name">StickerTest</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="activity_main_title">Nearby Devices</string>
    <string name="broadcast_device">Broadcast Device</string>

    <string name="bt_not_supported">Bluetooth is not supported on this device.</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device.</string>
    <string name="bt_not_enabled_leaving">Bluetooth Advertisements are not enabled.</string>

    <string name="refresh">Refresh</string>
    <string name="start_error_prefix">Start Advertising failed: </string>
    <string name="start_error_already_started">already started.</string>
    <string name="start_error_too_large">data packet exceeded 31 Byte limit.</string>
    <string name="start_error_unsupported">not supported on this device.</string>
    <string name="start_error_internal">internal error.</string>
    <string name="start_error_too_many">too many advertisers.</string>
    <string name="bt_null">Error: Bluetooth object null</string>
    <string name="last_seen">Last Seen:</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">minute ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="empty_list">No devices found - refresh to try again.</string>
    <string name="seconds">seconds.</string>
    <string name="scan_start_toast">Scanning for</string>
    <string name="already_scanning">Scanning already started.</string>
    <string name="no_name">(no name)</string>
    <string name="start_error_unknown">unknown error</string>
    <string name="advertising_timedout">Advertising stopped due to timeout.</string>
    <string name="stickertest">Stickertest</string>
    <string name="nfc_tags">NFC TAGS</string>
    <string name="scan_for_bluetooth_devices">Scan for Pairable Bluetooth Devices</string>
    <string name="scan_for_beacons">Scan for Beacons</string>
    <string name="errors">Errors</string>
    <string name="nfc_tag_communication">NFC Tag Communication</string>
    <string name="message">message</string>
    <string name="write">Write</string>

    <string-array name="xlabels">
       <item>A</item>
       <item>B</item>
       <item>C</item>
       <item>D</item>
       <item>E</item>
       <item>F</item>
       <item>H</item>
       <item>I</item>
       <item>J</item>
       <item>K</item>
       <item>L</item>
       <item>M</item>
    </string-array>
</resources>