<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6789AB">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stickertest" />

    <Button
        android:id="@+id/nfc_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/nfc_tags" />

    <Button
        android:id="@+id/blue_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/scan_for_bluetooth_devices" />

    <Button
        android:id="@+id/beacon_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/scan_for_beacons" />

    <Button
        android:id="@+id/file_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="File Read / Write" />

    <Button
        android:id="@+id/graph_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="GRAPH TEST" />

    <TextView
        android:id="@+id/error_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errors" />

</LinearLayout>